# nlp100fungo

./: .gitignore  pyproject.toml
ch01/: ch01.ipynb
ch02/: 10.sh  11.sh  12.sh  13.sh  14.sh  15.sh  16.sh  17.sh  18.sh  19.sh  ch02.ipynb
notebooks/: ch01.ipynb
