[tool.poetry]
name = "nlp100"
version = "0.1.0"
description = ""
authors = ["ToshinoriTakahashi <dr.t.takahashi.0917@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
polars = "^0.19.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
